--- a/kotlinx.metadata.interface/pom.xml
+++ b/kotlinx.metadata.interface/pom.xml
@@ -3,13 +3,13 @@
          xmlns="http://maven.apache.org/POM/4.0.0"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <artifactId>kotlinx.metadata.interface</artifactId>
+        <artifactId>kotlinx-metadata-interface</artifactId>
         <groupId>org.jetbrains.research</groupId>
-        <version>1.0-SNAPSHOT</version>
+        <version>1.0</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>interface</artifactId>
+    <artifactId>kotlinx.metadata.interface</artifactId>
 
     <properties>
         <kotlin.version>1.2.51</kotlin.version>
@@ -101,4 +101,12 @@
             <url>https://kotlin.bintray.com/kotlinx</url>
         </repository>
     </repositories>
+
+    <distributionManagement>
+        <repository>
+            <id>bintray-vorpal-research-kotlin-maven</id>
+            <name>vorpal-research-kotlin-maven</name>
+            <url>https://api.bintray.com/maven/vorpal-research/kotlin-maven/${project.artifactId}/;publish=1</url>
+        </repository>
+    </distributionManagement>
 </project>
