--- a/pom.xml
+++ b/pom.xml
@@ -5,11 +5,11 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>org.jetbrains.research</groupId>
-    <artifactId>kotlinx.metadata.interface</artifactId>
+    <artifactId>kotlinx-metadata-interface</artifactId>
     <packaging>pom</packaging>
-    <version>1.0-SNAPSHOT</version>
+    <version>1.0</version>
     <modules>
-        <module>interface</module>
+        <module>kotlinx.metadata.interface</module>
         <module>kapt-example</module>
         <module>example</module>
     </modules>
@@ -28,12 +28,4 @@
             </plugins>
         </pluginManagement>
     </build>
-
-    <distributionManagement>
-        <repository>
-            <id>bintray-vorpal-research-kotlin-maven</id>
-            <name>vorpal-research-kotlin-maven</name>
-            <url>https://api.bintray.com/maven/vorpal-research/kotlin-maven/${project.artifactId}/;publish=1</url>
-        </repository>
-    </distributionManagement>
 </project>
